--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,8 +7,8 @@
 }
 .about-header {
   font-family: 'Playfair Display', serif;
-  font-size: 40px;
-  font-weight: 600;
+  font-size: 56px;
+  font-weight: bold;
   text-align: center;
   margin-bottom: 8px;
   color: #2C2C2C;
@@ -175,7 +175,7 @@
   width: 100%;
   overflow: hidden;
   color: #222;
-  padding: 10px 0;
+  padding: 10px 0 40px 0;
   font-family: 'Playfair Display', serif;
 }
 
