--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,21 @@
   }
 }
 
-html, body {
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #f1f1f1;
+  background-color: #2C2C2C;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'DM Serif Display', serif;
+  font-weight: 400;
+  margin: 0;
 }
 
 *, *::before, *::after {
